src/Runtime/workflow-engine-app/infra/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workflow-engine-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
      appProtocol: http
      name: http
  selector:
    app: workflow-engine-app
